# metaname_smunz

./: AGENTS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: lint.yml
examples/: check_domain.py  register_domain.py
src/metaname_smunz/: __init__.py  api.py  models.py  secrets.py
tests/: test_api.py
tests/integration/: test_register_domain.py
